# neural-notes

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
docs/adrs/: 0001-use-python-for-ai-orchestration.md  0002-use-qdrant-for-vector-storage.md  0003-use-pydantic-ai-for-agent-workflows.md  0004-use-eval-driven-development.md  0005-use-opentelemetry-for-observability.md  0006-use-modular-package-architecture.md  README.md
src/neural_notes/: cli.py
tests/: test_cli.py
